--- a/src/main/resources/swagger/definitions/weakness/cwe/cwe.yml
+++ b/src/main/resources/swagger/definitions/weakness/cwe/cwe.yml
@@ -20,3 +20,6 @@ properties:
     type: array
     items:
       $ref: '#/definitions/CommonConsequences'
+  analysisInformation:
+    type: object
+    $ref: '#/definitions/CweThreatAnalysisInformation'
