--- a/src/main/resources/swagger/definitions/weakness/applied-cwe-threat.yml
+++ b/src/main/resources/swagger/definitions/weakness/applied-cwe-threat.yml
@@ -1,5 +1,5 @@
 allOf:
-  - $ref: '#/definitions/CweThreat'
+  - $ref: '#/definitions/CWEThreat'
   - type: object
     properties:
       threatID:
